<resources>
    <string name="app_name">Exception App</string>
    <string name="we_make_exceptions">We Make Exceptions</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_share_us">Share Us</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="exception_list">Exception List</string>
    <string name="enter_message">Enter Message</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
</resources>